Fix: IndexPage height overflow

--- a/frontend/src/components/IndexPage/IndexPage.scss
+++ b/frontend/src/components/IndexPage/IndexPage.scss
@@ -1,19 +1,13 @@
 .index-page-container {
   width: 100vw;
-  height: 100vh;
-
+  height: calc(100vh - 135px);
 
   .index-page-content-container {
     width: 100%;
-    height: 100%;
-  }
-
-  .map-wrapper {
-    width: 100%;
+    flex-grow: 1;
     height: 100%;
   }
 }
-
 
 @media only screen and (min-width: 2251px) {
   div {
