--- a/frontend/src/components/ListingsIndex/Listings.scss
+++ b/frontend/src/components/ListingsIndex/Listings.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  height: 100%;
   max-width: 100%;
   min-width: 600px;
   padding: 5px;
+  overflow-y: scroll;
+
 
   .listing-container-header {
     display: flex;
@@ -71,7 +72,6 @@
     justify-content: space-around;
     padding: 5px 10px;
     gap: 8px;
-    overflow-y: scroll;
   }
 }
 
